Traefik/cheese-default-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese-default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  backend:
    serviceName: stilton
    servicePort: 80
